# sdm-port-mui

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
backend/: main.py  requirements-build.txt  requirements.txt  sdm-api.spec
backend/services/: api_service.py  auth_service.py  batch_ssh.py  csv_parser.py  file_transfer_sshcommand.py  sdm_service.py  ssh_service.py
backend/sshCommander/: __init__.py  sshcommand.py
docs/: PACKAGING.md  RELEASE.md
scripts/: sidecar-prepare.mjs
src/: App.tsx
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/binaries/: README.md
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/components/: DeviceDataTable.tsx  FileTransferBatch.tsx
src/pages/: AuthPage.tsx  DashboardPage.tsx
src/services/: api.ts
src/store/: authStore.ts
src/styles/: theme.ts
src/utils/: constants.ts  nativeDialogs.ts
